fix : footer alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,3 +41,10 @@ footer p {
   align-items: center;
   justify-content: center;
 }
+
+.logo-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
